[fix]dashboard align content

--- a/src/app/components/dashboard-list/dashboard-list.component.scss
+++ b/src/app/components/dashboard-list/dashboard-list.component.scss
@@ -8,6 +8,7 @@
 		flex-direction: row;
 		flex-wrap: wrap;
 		height: 100%;
+		align-content: flex-start;
 
 		.dashboard__item {
 			width: 50%;
